try to fix scrollbug on mobile3

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,3 @@
   font-family: "Barlow Condensed", "sans-serif";
   font-size: 20px;
 }
-
-@supports (-webkit-touch-callout: none) {
-  .h-screen {
-    height: -webkit-fill-available;
-  }
-}
